fix exercise progress buttons and links, fix single pip alignment

--- a/kvak/components/progress-pips/progress-pips.css
+++ b/kvak/components/progress-pips/progress-pips.css
@@ -5,6 +5,10 @@
   align-items: center;
   justify-content: space-between;
 
+  &.single {
+    justify-content: center;
+  }
+
   .line {
     position: absolute;
     top: 50%;
@@ -43,7 +47,7 @@
         background-color: var(--color-green-lightest);
 
         &::after {
-          content: '';
+          content: "";
           width: 14px;
           height: 7px;
           position: absolute;
